# quant-a-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fetch_fundamentals.py  fetch_holders.py  fetch_mainboard.py  fetch_universe.py  main.py  pyproject.toml  streamlit_app.py
docs/: blogger-active-leader-strategy.md
docs/superpowers/specs/: 2026-05-09-daily-rotation-design.md  2026-05-09-streamlit-web-ui-design.md  2026-05-12-pure-stock-shrink-design.md  2026-06-17-ui-polish.md
plans/: 001-test-baseline.md  002-cs-web-nan-sanitize.md  003-portfolio-db-reconstruct-tail-trades.md  004-factor-pipeline-benchmark-inf.md  README.md
src/quant_a/: backtest.py  benchmarks.py  cache.py  cleaning.py  config.py  cs_pipeline.py  cs_web.py  data_fetch.py  event_backtest.py  factor_analysis.py  factor_backtest.py  factor_pipeline.py  factor_strategy.py  fundamentals.py  gc_pipeline.py  main.py  metrics.py  orders.py  plotting.py  portfolio.py  portfolio_db.py  portfolio_web.py  refresh_cs.py  review.py  runner.py  signals.py  strategy.py  strategy_web.py  trade_rules.py  transition.py  universe.py  walkforward.py  webjson.py
src/quant_a/platform/: __init__.py  adapters.py  registry.py  (+2 more)
tests/: test_active_leader.py  test_ai_leader.py  test_cs_web.py  test_factor_pipeline.py  test_factor_strategy.py  test_metrics.py  test_portfolio_db.py  test_portfolio_web.py  test_review.py  test_strategy_platform.py
web/: instrumentation-node.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: python.ts  strategies.ts
(+19 files in other folders)
